...
    <string name="toast_error_difficulty">Please select a difficulty…</string>
    <string name="toast_error_save_data">Ups! Error while saving data occurred…</string>
    <string name="toast_error_missing_data">Ups! Error while loading data occurred…</string>
    <string name="toast_error_corrupt_data">Ups! Retrieved data seems to be invalid…</string>
    <string name="dialog_delete_question">Delete this question?</string>
    <string name="dialog_delete_challenge">Delete this challenge?</string>
    <string name="dialog_exit_challenge">Exit challenge?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
</resources>

